--- a/web/frontend/rl-angular-spa/src/app/components/lib/landing-page/components-and-features-section/components-and-features-section.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/landing-page/components-and-features-section/components-and-features-section.component.html
@@ -1,8 +1,4 @@
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center animate__animated animate__zoomInDown">
-  <div class="mb-3 font-bold text-3xl">
-    <span class="text-900">Track expenses in the cloud, </span>
-    <span class="text-blue-600">collaboratively</span>
-  </div>
+<div class="surface-section px-4 pb-8 md:px-6 lg:px-8 text-center animate__animated animate__zoomInDown">
   <div class="text-700 mb-6"></div>
   <div class="grid">
     <div class="col-12 md:col-4 mb-4 px-5">
